Fix some html styling

--- a/_pages/privacy.html
+++ b/_pages/privacy.html
@@ -1,14 +1,11 @@
 ---
 layout: page
-title: What's New
+title: Privacy Policy
 include_in_header: true
 ---
 
-<!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>GU Assistant</title>
         <style>
         [data-custom-class='body'], [data-custom-class='body'] * {
                 background: transparent !important;
